# wpf-arytmetyka

./: .ocamlformat  arytmetyka.ml  arytmetyka_test.ml  dune
