(library
 (name arytmetyka)
 ; make all warnings non-fatal
 (flags
  (:standard -warn-error -a))
 ; ocamlc warnings are disabled because ocamlopt shows the same warnings
 (ocamlc_flags
  (:standard -w -a))
 (libraries))

(test
 (name arytmetyka_test)
 (modules arytmetyka_test)
 (libraries arytmetyka))
